--- a/index.html
+++ b/index.html
@@ -40,13 +40,18 @@
     <p><u>So she was considering</u> in her own mind (as well as she could, for the hot day made her <s>feel very sleepy
             and stupid</s>), whether the pleasure of making a daisy-chain would be worth the trouble of getting up and
         picking the daisies, when suddenly a White Rabbit with pink eyes ran close by her.</p>
-    <p>There was nothing so very remarkable in that; nor did Alice think it so <em>very</em> much out of the way to hear
+    <p>There was nothing <span>so very</span> remarkable in that; nor did Alice think it so <em>very</em> much out of
+        the way to hear
         the Rabbit say to itself, “Oh dear! Oh dear! I shall be late!” (when she thought it over afterwards, it occurred
         to her that she ought to have wondered at this, but at the time it all seemed quite natural); but when the
         Rabbit actually <i>took a watch out of its waistcoat-pocket</i>, and looked at it, and then hurried on, Alice
         started to her feet, for it flashed across her mind that she had never before seen a rabbit with either a
         waistcoat-pocket, or a watch to take out of it, and burning with curiosity, she ran across the field after it,
         and fortunately was just in time to see it pop down a large rabbit-hole under the hedge.</p>
+
+    <div>
+        <img src="/img/alice.png" alt="">
+    </div>
 
 </body>
 
