--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <li>Who Stole the Tarts?</li>
         <li>Alice’s Evidence</li>
     </ol>
+    <hr>
     <h2>CHAPTER I.<br>
         Down the Rabbit-Hole
         H<sub>2</sub>O
@@ -50,7 +51,8 @@
         and fortunately was just in time to see it pop down a large rabbit-hole under the hedge.</p>
 
     <div>
-        <img src="/img/alice.png" alt="">
+        <img src="https://geekxgirls.com/images/cosplay72/alice-cosplay-01.jpg" alt="Alice">
+        <a href="https://webref.ru/html/attr/common">Универсальные атрибуты</a></a>
     </div>
 
 </body>
