--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alice’s Adventures in Wonderland</title>
+    <link rel="stylesheet" href="/src/css/style.css">
 </head>
 
 <body>
@@ -54,7 +55,14 @@
         <img src="https://geekxgirls.com/images/cosplay72/alice-cosplay-01.jpg" alt="Alice">
         <a href="https://webref.ru/html/attr/common">Универсальные атрибуты</a></a>
     </div>
-
+    <header></header> <!-- шапка -->
+    <nav></nav> <!-- навигационное меню -->
+    <article></article> <!-- оформление записи в блоге -->
+    <section></section> <!-- секции на сайте -->
+    <aside></aside> <!-- Боковая колонка с информацией -->
+    <main></main> <!-- Основное содержание документа -->
+    <address></address> <!-- Адрес компании -->
+    <footer></footer> <!-- Подвал сайта -->
 </body>
 
 </html>
