--- a/src/index.html
+++ b/src/index.html
@@ -1,68 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Alice’s Adventures in Wonderland</title>
+        <link rel="stylesheet" href="/src/css/style.css" />
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alice’s Adventures in Wonderland</title>
-    <link rel="stylesheet" href="/src/css/style.css">
-</head>
+    <body>
+        <h1>Alice’s Adventures <br />in Wonderland</h1>
+        <h2>by Lewis Carroll</h2>
+        <h3>THE MILLENNIUM FULCRUM EDITION 3.0</h3>
+        <hr />
+        <h2>Contents</h2>
+        <ol type="I">
+            <li id="begin">Down the Rabbit-Hole</li>
+            <li>The Pool of Tears</li>
+            <li>A Caucus-Race and a Long Tale</li>
+            <li>The Rabbit Sends in a Little Bill</li>
+            <li>Advice from a Caterpillar</li>
+            <li>Pig and Pepper</li>
+            <li>A Mad Tea-Party</li>
+            <li>The Queen’s Croquet-Ground</li>
+            <li>The Mock Turtle’s Story</li>
+            <li>The Lobster Quadrille</li>
+            <li>Who Stole the Tarts?</li>
+            <li>Alice’s Evidence</li>
+        </ol>
+        <hr />
+        <h2 class="chapter pink">
+            CHAPTER I.<br />
+            Down the Rabbit-Hole H<sub>2</sub>O м<sup>3</sup>
+        </h2>
+        <p>
+            <b>Alice</b> was beginning to get very tired of sitting by her sister on the bank, and of having nothing to
+            do: once or twice she had peeped into the book her sister was reading, but it had no pictures or
+            conversations in it, <mark>“and what is the use of a book,”</mark> thought Alice
+            <span class="text">“without pictures or conversations?”</span>
+        </p>
+        <p>
+            <u>So she was considering</u> in her own mind (as well as she could, for the hot day made her
+            <s>feel very sleepy and stupid</s>), whether the pleasure of making a daisy-chain would be worth the trouble
+            of getting up and picking the daisies, when suddenly a White Rabbit with pink eyes ran close by her.
+        </p>
+        <p>
+            There was nothing <span>so very</span> remarkable in that; nor did Alice think it so <em>very</em> much out
+            of the way to hear the Rabbit say to itself, “Oh dear! Oh dear! I shall be late!” (when she thought it over
+            afterwards, it occurred to her that she ought to have wondered at this, but at the time it all seemed quite
+            natural); but when the Rabbit actually <i>took a watch out of its waistcoat-pocket</i>, and looked at it,
+            and then hurried on, Alice started to her feet, for it flashed across her mind that she had never before
+            seen a rabbit with either a waistcoat-pocket, or a watch to take out of it, and burning with curiosity, she
+            ran across the field after it, and fortunately was just in time to see it pop down a large rabbit-hole under
+            the hedge.
+        </p>
 
-<body>
-    <h1>Alice’s Adventures <br>in Wonderland</h1>
-    <h2>by Lewis Carroll</h2>
-    <h3>THE MILLENNIUM FULCRUM EDITION 3.0</h3>
-    <hr>
-    <h2>Contents</h2>
-    <ol type="I">
-        <li>Down the Rabbit-Hole</li>
-        <li>The Pool of Tears</li>
-        <li>A Caucus-Race and a Long Tale</li>
-        <li>The Rabbit Sends in a Little Bill</li>
-        <li>Advice from a Caterpillar</li>
-        <li>Pig and Pepper</li>
-        <li>A Mad Tea-Party</li>
-        <li>The Queen’s Croquet-Ground</li>
-        <li>The Mock Turtle’s Story</li>
-        <li>The Lobster Quadrille</li>
-        <li>Who Stole the Tarts?</li>
-        <li>Alice’s Evidence</li>
-    </ol>
-    <hr>
-    <h2>CHAPTER I.<br>
-        Down the Rabbit-Hole
-        H<sub>2</sub>O
-        м<sup>3</sup>
-    </h2>
-    <p><b>Alice</b> was beginning to get very tired of sitting by her sister on the bank, and of having nothing to do:
-        once or twice she had peeped into the book her sister was reading, but it had no pictures or conversations in
-        it, <mark>“and what is the use of a book,”</mark> thought Alice <strong>“without pictures or
-            conversations?”</strong></p>
-    <p><u>So she was considering</u> in her own mind (as well as she could, for the hot day made her <s>feel very sleepy
-            and stupid</s>), whether the pleasure of making a daisy-chain would be worth the trouble of getting up and
-        picking the daisies, when suddenly a White Rabbit with pink eyes ran close by her.</p>
-    <p>There was nothing <span>so very</span> remarkable in that; nor did Alice think it so <em>very</em> much out of
-        the way to hear
-        the Rabbit say to itself, “Oh dear! Oh dear! I shall be late!” (when she thought it over afterwards, it occurred
-        to her that she ought to have wondered at this, but at the time it all seemed quite natural); but when the
-        Rabbit actually <i>took a watch out of its waistcoat-pocket</i>, and looked at it, and then hurried on, Alice
-        started to her feet, for it flashed across her mind that she had never before seen a rabbit with either a
-        waistcoat-pocket, or a watch to take out of it, and burning with curiosity, she ran across the field after it,
-        and fortunately was just in time to see it pop down a large rabbit-hole under the hedge.</p>
+        <div>
+            <img src="https://geekxgirls.com/images/cosplay72/alice-cosplay-01.jpg" alt="Alice" />
+            <a href="https://webref.ru/html/attr/common">Универсальные атрибуты</a>
+        </div>
 
-    <div>
-        <img src="https://geekxgirls.com/images/cosplay72/alice-cosplay-01.jpg" alt="Alice">
-        <a href="https://webref.ru/html/attr/common">Универсальные атрибуты</a></a>
-    </div>
-    <header></header> <!-- шапка -->
-    <nav></nav> <!-- навигационное меню -->
-    <article></article> <!-- оформление записи в блоге -->
-    <section></section> <!-- секции на сайте -->
-    <aside></aside> <!-- Боковая колонка с информацией -->
-    <main></main> <!-- Основное содержание документа -->
-    <address></address> <!-- Адрес компании -->
-    <footer></footer> <!-- Подвал сайта -->
-</body>
-
+        <div class="box">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit obcaecati odit dolorum consequuntur
+            facere porro maiores veniam deserunt necessitatibus nihil quam pariatur architecto, aspernatur quae aperiam
+            quas. Hic, possimus quia?
+        </div>
+        <div class="box">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore cumque, ad sed eos laborum repellendus, at
+            dolorem quis eligendi pariatur officiis cum itaque, deserunt maiores suscipit voluptas rerum! Ut, expedita?
+        </div>
+    </body>
 </html>
