new_lesson_experiment

--- a/src/index.html
+++ b/src/index.html
@@ -14,20 +14,22 @@
         <h3>THE MILLENNIUM FULCRUM EDITION 3.0</h3>
         <hr />
         <h2>Contents</h2>
-        <ol type="I">
-            <li id="begin">Down the Rabbit-Hole</li>
-            <li>The Pool of Tears</li>
-            <li>A Caucus-Race and a Long Tale</li>
-            <li>The Rabbit Sends in a Little Bill</li>
-            <li>Advice from a Caterpillar</li>
-            <li>Pig and Pepper</li>
-            <li>A Mad Tea-Party</li>
-            <li>The Queen’s Croquet-Ground</li>
-            <li>The Mock Turtle’s Story</li>
-            <li>The Lobster Quadrille</li>
-            <li>Who Stole the Tarts?</li>
-            <li>Alice’s Evidence</li>
-        </ol>
+        <nav>
+            <ol type="I">
+                <li id="begin">Down the Rabbit-Hole</li>
+                <li>The Pool of Tears</li>
+                <li>A Caucus-Race and a Long Tale</li>
+                <li>The Rabbit Sends in a Little Bill</li>
+                <li>Advice from a Caterpillar</li>
+                <li>Pig and Pepper</li>
+                <li>A Mad Tea-Party</li>
+                <li>The Queen’s Croquet-Ground</li>
+                <li>The Mock Turtle’s Story</li>
+                <li>The Lobster Quadrille</li>
+                <li>Who Stole the Tarts?</li>
+                <li>Alice’s Evidence</li>
+            </ol>
+        </nav>
         <hr />
         <h2 class="chapter pink">
             CHAPTER I.<br />
@@ -55,19 +57,23 @@
             the hedge.
         </p>
 
-        <div>
-            <img src="https://geekxgirls.com/images/cosplay72/alice-cosplay-01.jpg" alt="Alice" />
-            <a href="https://webref.ru/html/attr/common">Универсальные атрибуты</a>
-        </div>
+        <img src="https://geekxgirls.com/images/cosplay72/alice-cosplay-01.jpg" alt="Alice" />
 
-        <div class="box">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit obcaecati odit dolorum consequuntur
-            facere porro maiores veniam deserunt necessitatibus nihil quam pariatur architecto, aspernatur quae aperiam
-            quas. Hic, possimus quia?
-        </div>
-        <div class="box">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore cumque, ad sed eos laborum repellendus, at
-            dolorem quis eligendi pariatur officiis cum itaque, deserunt maiores suscipit voluptas rerum! Ut, expedita?
+        <div class="example">
+            <div class="box">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, nesciunt amet deserunt labore aperiam ut?
+                Quibusdam quisquam tenetur
+            </div>
+            <div class="box">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat, inventore ipsum. Cupiditate nisi
+                recusandae deleniti tenetur quos ea, minus, ut voluptate a, voluptatibus eveniet quis reiciendis
+                possimus sunt officiis amet.
+            </div>
+            <div class="box red">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat, inventore ipsum. Cupiditate nisi
+                recusandae deleniti tenetur quos ea, minus, ut voluptate a, voluptatibus eveniet quis reiciendis
+                possimus sunt officiis amet.
+            </div>
         </div>
     </body>
 </html>
